# wlang

./: .gitignore  Cargo.toml
crates/ast/: Cargo.toml
crates/ast/src/: css.rs  expr.rs  html.rs  lib.rs  script.rs  stmt.rs  token.rs  validation.rs
crates/ast_lowering/: Cargo.toml  README.md
crates/ast_lowering/src/: lib.rs
crates/ast_validation/: Cargo.toml
crates/ast_validation/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen_js/: Cargo.toml
crates/codegen_js/src/: lib.rs
crates/css_ast/: Cargo.toml
crates/css_ast/src/: lib.rs  property.rs  selector.rs  token.rs  value.rs
crates/css_lexer/: Cargo.toml
crates/css_lexer/src/: lib.rs
crates/css_lexer/tests/: test.rs
crates/css_lexer_next/: Cargo.toml
crates/css_lexer_next/src/: lib.rs  token.rs
crates/css_lexer_next/tests/: test.rs
crates/css_parser/: Cargo.toml
crates/css_parser/src/: lib.rs  token_cursor.rs
crates/css_parser/tests/: test.rs
crates/cursor/: Cargo.toml
crates/cursor/src/: lib.rs
crates/hir/src/: database.rs  lib.rs
crates/html_ast/: Cargo.toml
crates/html_ast/src/: lib.rs
crates/html_lexer/: Cargo.toml
crates/html_lexer/src/: lib.rs  token.rs
crates/html_lexer/tests/: test.rs
crates/html_parser/: Cargo.toml
crates/html_parser/src/: lib.rs
crates/html_parser/tests/: test.rs
crates/html_parser/tests/snapshots/: test__basic_test_cases-2.snap  test__basic_test_cases-3.snap  test__basic_test_cases-4.snap  test__basic_test_cases-5.snap  test__basic_test_cases-6.snap  test__basic_test_cases-6.snap.new  test__basic_test_cases-7.snap  test__basic_test_cases-8.snap  test__basic_test_cases-9.snap  test__basic_test_cases.snap
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  error.rs  identifier.rs  lib.rs  number.rs  string.rs  test.rs  tests.rs  token.rs  token_kind.rs  whitespace.rs
crates/parser/: Cargo.toml
crates/parser/src/: cursor.rs  error.rs  event.rs  grammar.rs  identifier.rs  lib.rs  parser.rs  script.rs  sink.rs  style.rs  tests.rs  view.rs  whitespace.rs
crates/parser/tests/: view.rs
crates/syntax/: Cargo.toml
crates/syntax_tree/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: main.rs
leg/cli/: Cargo.toml
leg/hir/: Cargo.toml
leg/lexer/: Cargo.toml
leg/syntax/: Cargo.toml
spec/: spec.md
(+31 files in other folders)
