[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[[bin]]
name = "main"
path = "fuzz_targets/main.rs"

[dependencies]
libfuzzer-sys = "0.3"
ast = { path = "../crates/ast" }
ast_validation = { path = "../crates/ast_validation" }
ast_lowering = { path = "../crates/ast_lowering" }
hir = { path = "../crates/hir" }
parser = { path = "../crates/parser" }
