[package]
name = "css_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
css_lexer = { path = "../css_lexer" }
css_ast = { path = "../css_ast" }

[dev-dependencies]
cursor = { path = "../cursor" }
