[package]
name = "html_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_lexer = { path = "../html_lexer" }
html_ast = { path = "../html_ast" }

[dev-dependencies]
serde = { version = "1" }
serde_json = { version = "1" }
