[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
ast = { path = "../ast" }
ast_lowering = { path = "../ast_lowering" }
ast_validation = { path = "../ast_validation" }
hir = {path = "../hir"}
codegen_js = {path = "../codegen_js"}
